[gd_scene load_steps=7 format=3 uid="uid://bjr74xjajbvmn"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_qti2w"]
[ext_resource type="PackedScene" uid="uid://dxk5a42qably" path="res://Scenes/idle_arrow_down.tscn" id="2_2y5vf"]
[ext_resource type="PackedScene" uid="uid://u7b4u862dv8a" path="res://Scenes/idle_arrow_left.tscn" id="2_cg8m1"]
[ext_resource type="PackedScene" uid="uid://25g3ye3m68ks" path="res://Scenes/idle_arrow_right.tscn" id="3_geq0x"]
[ext_resource type="PackedScene" uid="uid://c2bjfq7x6a7na" path="res://Scenes/idle_arrow_up.tscn" id="4_o0tjx"]
[ext_resource type="FontFile" uid="uid://wsic8gsmxl8c" path="res://Assets/fonts/ARCADECLASSIC.TTF" id="6_gxlgy"]

[node name="Game" type="Node2D"]
script = ExtResource("1_qti2w")

[node name="Create" type="Node2D" parent="."]

[node name="Marker2D_AL" type="Marker2D" parent="Create"]
position = Vector2(320, 64)

[node name="Marker2D_AD" type="Marker2D" parent="Create"]
position = Vector2(384, 64)

[node name="Marker2D_AU" type="Marker2D" parent="Create"]
position = Vector2(448, 64)

[node name="Marker2D_AR" type="Marker2D" parent="Create"]
position = Vector2(512, 64)

[node name="Idle_ArrowLeft" parent="." instance=ExtResource("2_cg8m1")]
position = Vector2(320, 448)

[node name="Idle_ArrowDown" parent="." instance=ExtResource("2_2y5vf")]
position = Vector2(384, 448)

[node name="Idle_ArrowRight" parent="." instance=ExtResource("3_geq0x")]
position = Vector2(512, 448)

[node name="Idle_ArrowUp" parent="." instance=ExtResource("4_o0tjx")]
position = Vector2(448, 448)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Score" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Score"]
offset_left = 576.0
offset_top = 128.0
offset_right = 768.0
offset_bottom = 191.0
theme_override_fonts/font = ExtResource("6_gxlgy")
theme_override_font_sizes/font_size = 64
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
